<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragment.HomeFragment">

    <!--1-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout_home_fragment_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--1_1-->
        <ImageView
            android:id="@+id/imageView_home_fragment_1_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/a1"
            android:src="@drawable/ic_mosque"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--1_2-->
        <TextView
            android:id="@+id/textView_home_fragment_1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a10"
            android:textColor="@color/primary_light"
            android:textSize="7pt"
            android:textStyle="bold"
            android:fontFamily="@font/monsettrat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_home_fragment_1_1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" />

        <!--1_3-->
        <TextView
            android:id="@+id/textView_home_fragment_1_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/a2"
            android:textColor="@color/primary_light"
            android:textSize="9pt"
            app:fontFamily="@font/monsettrat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_home_fragment_1_2" />

        <!--1_4-->
        <TextView
            android:id="@+id/textView_home_fragment_1_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/a7"
            android:textColor="@color/primary_light"
            android:textSize="9pt"
            app:fontFamily="@font/monsettrat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_home_fragment_1_2" />

        <!--1_5-->
        <TextView
            android:id="@+id/textView_home_fragment_1_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/a3"
            android:textColor="@color/primary_light"
            android:textSize="9pt"
            app:fontFamily="@font/monsettrat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_home_fragment_1_3" />

        <!--1_6-->
        <TextView
            android:id="@+id/textView_home_fragment_1_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/a7"
            android:textColor="@color/primary_light"
            android:textSize="9pt"
            app:fontFamily="@font/monsettrat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_home_fragment_1_4" />

        <!--1_7-->
        <TextView
            android:id="@+id/textView_home_fragment_1_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/a4"
            android:textColor="@color/primary_light"
            android:textSize="9pt"
            app:fontFamily="@font/monsettrat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_home_fragment_1_5" />

        <!--1_8-->
        <TextView
            android:id="@+id/textView_home_fragment_1_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/a7"
            android:textColor="@color/primary_light"
            android:textSize="9pt"
            app:fontFamily="@font/monsettrat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_home_fragment_1_6" />

        <!--1_9-->
        <TextView
            android:id="@+id/textView_home_fragment_1_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/a5"
            android:textColor="@color/primary_light"
            android:textSize="9pt"
            app:fontFamily="@font/monsettrat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_home_fragment_1_7" />

        <!--1_10-->
        <TextView
            android:id="@+id/textView_home_fragment_1_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/a7"
            android:textColor="@color/primary_light"
            android:textSize="9pt"
            app:fontFamily="@font/monsettrat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_home_fragment_1_8" />

        <!--1_11-->
        <TextView
            android:id="@+id/textView_home_fragment_1_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/a6"
            android:textColor="@color/primary_light"
            android:textSize="9pt"
            app:fontFamily="@font/monsettrat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_home_fragment_1_9" />

        <!--1_12-->
        <TextView
            android:id="@+id/textView_home_fragment_1_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/a7"
            android:textColor="@color/primary_light"
            android:textSize="9pt"
            app:fontFamily="@font/monsettrat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_home_fragment_1_10" />

        <!--1_13-->
        <View
            android:id="@+id/view_home_fragment_1_13"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/primary_light"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_home_fragment_1_12"/>

        <!--1_14-->
        <TextView
            android:id="@+id/textView_home_fragment_1_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a8"
            android:gravity="center"
            android:textColor="@color/primary_light"
            android:textSize="9pt"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:fontFamily="@font/monsettrat_medium_italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_home_fragment_1_13" />

        <!--1_15-->
        <TextView
            android:id="@+id/textView_splash_screen_fragment_1_15"
            android:text="@string/a9"
            android:textSize="7pt"
            android:textColor="@color/primary_light"
            android:textStyle="bold"
            android:fontFamily="@font/monsettrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView_home_fragment_1_14"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>